# typedb-examples

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  RELEASE_NOTES_LATEST.md  WORKSPACE  deployment.bzl  sample-datasets.yml
.factory/: automation.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: backend-ci.yml  datasets.yml
2025-advent-of-typeql/: README.md  countries_data.csv  day_1.md  day_10.md  day_11.md  day_12.md  day_13.md  day_14.md  day_2.md  day_3.md  day_4.md  day_5.md  day_6.md  day_7.md  day_8.md  day_9.md  schema.tql
2025-advent-of-typeql/resources/: data-regions.tql  day_10_data.tql  day_10_schema.tql  day_13_data.tql  day_14_data.tql  day_14_schema.tql  day_1_data.tql  day_3_data.tql  day_4_data.tql  day_6_data.tql  day_9_data.tql  day_9_schema.tql  schema.tql
bookstore/: README.md  data.tql
bookstore/data_generator/: query_builder.py  query_generator.py
cloud-api-scripts/: README.md
cloud-api-scripts/bash/: deploy.sh
cloud-api-scripts/nodejs/: deploy.js
cloud-api-scripts/python/: main.py  pyproject.toml
cyber-threat-intelligence/: README.md  dataset.tql  define-schema.tql  insert-data.tql  schema.tql
cyber-threat-intelligence/examples/: 01-list-id_unknown.tql  02-list-identity.tql  03-create-malware.tql  04-assign-target.tql  05-infered-uses.tql  06-uses-chain.tql  07-external-reference.tql  08-check-intrusion-set.tql  exercise-solutions.tql  query1.tql  query2.tql  query3.tql  query4.tql  query5.tql  query6.tql  query7.tql  query8.tql
dependencies/typedb/: BUILD  repositories.bzl
docs/: README.md  antora.yml
drug-discovery/: README.md  define-schema.tql  insert-data.tql
drug-discovery/examples/: 01-list-protein-names.tql  02-explain-protein-encoding.tql  02-list-encoding-genes.tql  03-explain-tissue-expressions.tql  04-explain-tissue-enhancement.tql  05-explain-protein-associations.tql  06-list-potential-neoplasm-treatments.tql  07-explain-cyclophosphamide-treatment.tql  08-explain-nivolumab-treatment.tql  08-explore-nivolumab-treatment.tql  91-list-potential-neoplasm-treatments.tql  92-explain-cyclophosphamide-treatment.tql  93-explain-nivolumab-treatment.tql  exercise-solutions.tql
fullstack/: README.md  data.tql  schema.tql
fullstack/backend/: Cargo.toml
fullstack/backend/java/: README.md  build.gradle
fullstack/backend/java/src/main/java/com/example/backendjava/: BackendjavaApplication.java  Page.java  PageController.java  Query.java  TypeDBConfig.java
fullstack/backend/java/src/main/resources/: application.properties
fullstack/backend/python/: README.md  app.py  config.py  queries.py  requirements.txt
fullstack/backend/rust/: README.md
fullstack/backend/rust/src/: config.rs  main.rs  query.rs
fullstack/backend/src/: main.rs  query.rs
fullstack/backend/tests/: conftest.py  models.py  requirements.txt  test_groups.py  test_groups_orgs.py  test_orgs.py  test_posts_comments.py  test_users.py
fullstack/frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts
iam-demo/: README.md  define-schema.tql
iam-demo/examples/: 01-list-users.tql  05-grant-permission.tql  06-add-new-segregation-policy.tql  07-check-user-permission-1.tql  (+1 more)
identity-and-access-management/: README.md  define-schema.tql  insert-data.tql  setup-script.tqls
social-network/: README.md
use-cases/agentic-finance/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
use-cases/agentic-finance/database/: data.tql  schema.tql
use-cases/agentic-finance/src/agent/: db.py  graph.py  main.py  seed.py  tools.py
webapp/: README.md  package-lock.json  package.json  vite.config.mts  vite.config.ts
webapp/src/: App.tsx  (+6 more)
(+169 files in other folders)
